# gh-master-oct

./: .gitignore  .pre-commit-config.yaml  README.md  ejercicio_entorno.ipynb  instrucciones github.md  mis_apuntes.md  modulo02_apuntes.md  package-list.txt  pruebas_docstrings.ipynb  pruebas_entornos.ipynb  pruebas_preprocessing.ipynb  pyproject.toml
.github/workflows/: build.yml
docs/: build_pre_--junitxml=jest-junit.xml.yml  install.rst  mis_apuntes.md  mis_apuntes_back.md
docs/source/: conf.py  example.rst  index.rst  requirements.txt
modeltools/: jest-junit.xml  preprocessing.py
tests/: test_preprocessing.py
